--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@ body {
   overflow: hidden;
 }
 
-div.jumbotron {
+div.main {
   height: 100vh;
   text-align: center;
   background-color: #e0fff0;
   border-style: solid;
   border-color: #ffcb94;
-  border-width: 20px;
+  border-width: 2rem;
+  padding: 1rem;
 }
 
 img {
@@ -17,4 +18,15 @@ img {
 
 h1 {
   font-family: 'Pacifico', sans-serif;
+}
+
+a {
+    color: black;
+    font-size: 2rem;
+    padding: 1rem;
+}
+
+a:hover {
+    color: #ffb194;
+    text-decoration: none;
 }
